120_kubernetes/voting_app/traefik-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-controller
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ingress-controller
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      nodeSelector:
        dille.io/type: lb
      containers:
      - image: traefik:3.1.5
        name: traefik-ingress-lb
        args:
        - --api.insecure
        - --api.dashboard
        - --providers.kubernetesingress
        - --entryPoints.web.address=:80
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: admin
          containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 80
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          tcpSocket:
            port: 80
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
