120_kubernetes/voting_app/traefik-dashboard.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik.dille.io
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: traefik
                port:
                  name: admin
